# python_contest_template

./: README.md  pyproject.toml  requirements.txt  upload.sh  题单.md
notes/: 双指针.md  数论.md  状压dp.md
src/basic/: array_of_difference.py  binary_lifting.py  binary_search.py
src/basic_algorithm/: binary_search.py
src/character_string/: prefix_function.py  z_function.py
src/data_structure/: bit.py  dsu.py  monotonic_queue.py  monotonic_stack.py  segment_tree.py  sparse_table.py  stack.py
src/dynamic_programming/: digital_dp.py
src/graph/: bfs.py  binary_search_tree.py  binary_tree.py  find_circle.py  km_algorithm.py  lca.py  minimum_spanning_tree.py  smallest_routes.py  topological_sorting.py
src/mathematic/: combinatorics.py  common_formula.py  euclidean_algorithm.py  euler_totient_function.py  fast_power.py  fermat_little_theorem.py  filter_prime.py  find_prime_factor.py  greatest_common_divisor.py  judge_prime.py
src/misc/: bootstrap.py  discretization.py  double_pointer.py
src/python_contest_template/: binary_tree.py  single_linked_list.py
src/search/: backtrace.py
tests/: test_smallest_routes.py
tests/test_basic/: test_array_of_distance.py  test_binary_search.py
tests/test_data_structure/: test_bit.py  test_dsu.py
tests/test_graph/: test_bfs.py  test_find_circle.py  test_km_algorithm.py  test_smallest_routes.py
tests/test_mathematic/: test_fast_power.py  test_fermat_little_theorem.py  test_find_prime_factor.py  test_greatest_common_divisor.py  test_judge_prime.py
tests/test_misc/: test_discretization.py
